--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,7 @@
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "items", items_path %></li>
-      <li><%= link_to "Sign in", '#' %></li>
+      <li><%= link_to "Sign In", '#' %></li>
       <li><%= link_to "Register", register_path %></li>
     </ul>
   </nav>
