--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,10 @@
   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
+<table class="sidebar">
+  <tr><td>category 1</td></tr>
+  <tr><td>category 2</td></tr>
+  <tr><td>category 3</td></tr>
+  <tr><td>category 4</td></tr>
+  <tr><td>category 5</td></tr>
+</table>
