--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -112,3 +112,11 @@ footer {
 footer nav {
   float: none;
 }
+
+/* Sidebar */
+.sidebar {
+  width: 20%;
+  padding: 1em;
+  vertical-align: top;
+  background: #bbb;
+}
