--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,18 @@
 
-
-<body>
-
-<div id="menu">
-<table>
-  <tr><td>category 1</td></tr>
-  <tr><td>category 2</td></tr>
-  <tr><td>category 3</td></tr>
-  <tr><td>category 4</td></tr>
-  <tr><td>category 5</td></tr>
-</table>
-</div>
-
-
-
-<div id="content">
-
 <h1>Main page</h1>
 <p>
   This is the home page for the
   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
-</div>
 
-</body>
+
+
+<table class="sidebar">
+  <tr><td>category 1</td></tr>
+  <tr><td>category 2</td></tr>
+  <tr><td>category 3</td></tr>
+  <tr><td>category 4</td></tr>
+  <tr><td>category 5</td></tr>
+</table>
+
