Added devise for user authentication - AD LM

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Sign In", '#' %></li>
       <li><%= link_to "Register", register_path %></li>
+      <%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %>
     </ul>
   </nav>
 </header>
