--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,14 @@
 <html>
   <head>
     <title><%= title %></title>
+    <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
   </head>
   <body>
+
+   <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div class="container">
       <%= render 'layouts/header' %>
       <section class="round">
