--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
   <body>
     <div class="container">
       <%= render 'layouts/header' %>
+
+      <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
       <section class="round">
         <%= yield %>
       </section>
