--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,49 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
 
-<h1>Main page</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+</head>
 
+<body>
 
+<div id="page-container">
 
-<table class="sidebar">
-  <tr><td>category 1</td></tr>
-  <tr><td>category 2</td></tr>
-  <tr><td>category 3</td></tr>
-  <tr><td>category 4</td></tr>
-  <tr><td>category 5</td></tr>
-</table>
+	<div id="sidebar-a">
+		<div class="padding">
+			Electronics<br />
+			Fashion<br />
+			Books<br />
+			Furniture<br />
+		</div>
+	</div>
 
+	<div id="content">
+		<table border="1">
+			<tr>
+				<td>
+				Item 1.  $20.00
+				Ending in: 20 mins
+				</td>
+				<td>
+				Item 2.  $11.50
+				Ending in: 1 hr, 20 mins
+				</td>
+			</tr>
+			<tr>
+				<td>
+				Item 3.  $15.00
+				Ending in: 3 days, 4 hrs, 20 mins
+				</td>
+				<td>
+				Item 4.  $140.90
+				Ending in: 7 days, 1 hr, 20 mins
+				</td>
+			</tr>
+		</table>
+	</div>
+
+</div>
+
+</body>
+</html>
