Home page devise related pages changed : AD,LM

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,16 @@
   </head>
   <body>
 
-   <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <div class="container">
       <%= render 'layouts/header' %>
 
-      <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+     <% if notice.present? -%>
+        <p class="notice"><%= notice %></p>
+      <% end -%>
+
+      <% if alert.present? -%>
+        <p class="alert"><%= alert %></p>
+      <% end -%>
 
       <section class="round">
         <%= yield %>
