--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 
     <h1>Contact</h1>
     <p>
-      Contact Ruby on Rails Tutorial about the sample app at the
-      <a href="http://railstutorial.org/feedback">feedback page</a>.
+      Hello. We are excited to talk to u. Contact us at 412-BESTBAY !
+      <!--<a href="http://railstutorial.org/feedback">feedback page</a>-->
     </p>
