--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,13 @@
 <header>
   <% logo = image_tag("BBW.png", :alt => "Sample App", :class => "round") %>
   <%= link_to logo, root_path %>
+  <%= javascript_include_tag 'rails' %>
+  <%= javascript_include_tag :defaults %>
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Sign In", '#' %></li>
-      <li><%= link_to "Register", register_path %></li>
-      <%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %>
+        <%= render 'devise/menu/registration_items' %>
+        <%= render 'devise/menu/login_items' %>
     </ul>
   </nav>
 </header>
