--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,8 @@
 
-<h1>Main page</h1>
+<title>Home page</title>
 <p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
+  Welcome to BESTBAY !
 </p>
-
-
 
 <table class="sidebar">
   <tr><td>category 1</td></tr>
