--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,9 +4,6 @@
 <head>
 
 <title>Home page</title>
-<p>
-  Welcome to BESTBAY !
-</p>
 
 <!--<table class="sidebar">
   <tr><td>category 1</td></tr>
@@ -24,10 +21,11 @@
 
 	<div id="sidebar-a">
 		<div class="padding">
-			Electronics<br />
-			Fashion<br />
-			Books<br />
-			Furniture<br />
+            <b>CATEGORIES</b>
+			Electronics >><br />
+			Fashion >><br />
+			Books >><br />
+			Furniture >><br />
 		</div>
 	</div>
 
