just committing to avoid pull conflicts AD,LM

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,21 +36,21 @@
 		<table border="1">
 			<tr>
 				<td>
-				Item 1.  $20.00
+				Sweat Shirt  $20.00
 				Ending in: 20 mins
 				</td>
 				<td>
-				Item 2.  $11.50
+				Floor Lamp  $11.50
 				Ending in: 1 hr, 20 mins
 				</td>
 			</tr>
 			<tr>
 				<td>
-				Item 3.  $15.00
+				Backpack  $15.00
 				Ending in: 3 days, 4 hrs, 20 mins
 				</td>
 				<td>
-				Item 4.  $140.90
+				iPhone.  $140.90
 				Ending in: 7 days, 1 hr, 20 mins
 				</td>
 			</tr>
