--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
   <%= link_to logo, root_path %>
   <%= javascript_include_tag 'rails' %>
   <%= javascript_include_tag :defaults %>
-  <nav class="round">
-    <ul>
+  <nav>
+    <ul class="header-links">
       <li><%= link_to "Home", root_path %></li>
         <%= render 'devise/menu/registration_items' %>
         <%= render 'devise/menu/login_items' %>
