--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,8 +1,8 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
-<%= stylesheet_link_tag 'blueprint/print',  :media => 'print' %>
+<%= stylesheet_link_tag 'blueprint/screen', :media=>"screen, projection" %>
+<%= stylesheet_link_tag 'blueprint/print',  :media=>"screen, projection"  %>
 <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
-<%= stylesheet_link_tag 'custom', :media => 'screen' %>
-<%= stylesheet_link_tag 'bootstrap', :media => 'screen' %>
+<%= stylesheet_link_tag 'custom', :media=>"screen, projection"  %>
+<%= stylesheet_link_tag 'bootstrap', :media=>"screen, projection"  %>
