Added Paperclip. Photo Upload to new item working. -CD

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@item) do |f| %>
+<%= form_for @item, :html => { :multipart => true } do |f| %>
   <% if @item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
@@ -31,6 +31,10 @@
   		<option value="3">Editor</option>
 	</select>
   </div>
+  <div class="field">
+    <%= f.file_field :photo %>
+  </div>
+
   <div class="field">
     <%= f.label :starting_price %><br />
     <%= f.text_field :starting_price %>
