--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= title %></title>
+  <!--added to fix destroy bug-->
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= render 'layouts/stylesheets' %>
