--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -21,18 +21,13 @@
   </div>
   <div class="field">
     <%= f.label :condition %><br />
-    <%= f.check_box :condition %>
+    <%= f.select :condition, [['New','new'] , ['Used', 'used']]%>
   </div>
+
   <div class="field">
-  	<select name="condition">
-  		<option value=""></option>
-  		<option value="1" selected="selected">Administrator</option>
-  		<option value="2">User</option>
-  		<option value="3">Editor</option>
-	</select>
-  </div>
-  <div class="field">
+    <%= f.label :photo %><br />
     <%= f.file_field :photo %>
+
   </div>
 
   <div class="field">
@@ -41,7 +36,7 @@
   </div>
   <div class="field">
     <%= f.label :category_id %><br />
-    <%= f.text_field :category_id %>
+    <%= f.select :category_id, [['Currently Listed','current']]%>
   </div>
   <div class="field">
     <%= f.label :seller_id %><br />
