Fixing text fields in new and registration pages: AD,LM

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,31 +19,31 @@
 
     <div><%= f.label :first_name %>
       <br/>
-      <%= f.email_field :first_name %></div>
+      <%= f.text_field :first_name %></div>
 
     <div><%= f.label :last_name %>
       <br/>
-      <%= f.email_field :last_name %></div>
+      <%= f.text_field :last_name %></div>
 
     <div>Date of birth
       <br/>
-      <%= f.email_field :dob %></div>
+      <%= f.text_field :dob %></div>
 
     <div><%= f.label :street %>
       <br/>
-      <%= f.email_field :street %></div>
+      <%= f.text_field :street %></div>
 
     <div><%= f.label :city %>
       <br/>
-      <%= f.email_field :city %></div>
+      <%= f.text_field :city %></div>
 
     <div><%= f.label :zip %>
       <br/>
-      <%= f.email_field :zip %></div>
+      <%= f.text_field :zip %></div>
 
     <div><%= f.label :state %>
       <br/>
-      <%= f.email_field :state %></div>
+      <%= f.text_field :state %></div>
 
     <div><%= f.submit "Update" %></div>
 <% end %>
