Making DOB label

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,7 +25,8 @@
       <br/>
       <%= f.text_field :last_name %></div>
 
-    <div>Date of birth
+    <div>
+      <label>Date of birth</label>
       <br/>
       <%= f.text_field :dob %></div>
 
