--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,8 @@
       <br/>
       <%= f.text_field :last_name %></div>
 
-    <div>Date of birth
+    <div>
+      <label>Date of birth</label>
       <br/>
       <%= f.text_field :dob %></div>
 
