--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,16 +16,16 @@
 <!-- Example row of columns -->
 <div class="row">
   <div class="span6">
-    <h2>Apple iPod touch - $188</h2>
+    <h2>Apple iPad $200</h2>
 
-    <p>Apple iPod touch 4th Generation (8 GB) (Latest Model). The Gyro+ Accelerometer of the iPod touch 4G enables
+    <p>Apple iPad (8 GB) (Latest Model). The Gyro+ Accelerometer of the iPod touch 4G enables
       better motion sensing like full 3D attitude, rotation rate and user acceleration, making gaming even more
       enjoyable. With a built-in editing feature, you do not have to wait to get to your PC to edit your videos; you can
       do that right away on this Apple media player. The two cameras of this digital media player shoot amazing videos
       in HD 720p resolution while the integrated microphone can record conversations or music simultaneously.
     </p>
 
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <p><a class="btn" href="/items/1">View details &raquo;</a></p>
   </div>
   <div class="span5">
     <h2>Floor Lamp - $12</h2>
