Modification to items page. CD WK

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <div class="well">
       <h5>General Categories</h5>
       <ul>
+        <li class="active"><%= link_to "All Items", items_path %></li>
         <li><a href="#">Books</a></li>
         <li><a href="#">Music</a></li>
         <li><a href="#">Movies</a></li>
