Added links to new and add items in home page : AD,LM

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,9 @@
     <div class="container">
       <div class="hero-unit">
         <h2>Welcome back!</h2>
-        <p>Check out the hot items below</p>
+        <p>Check out the today's hot deals below or Put your item up for sale</p>
+        <p><a class="btn primary large" href='<%=new_item_path%>'>Sell your item »</a></p>
+        <p><a class="btn primary large" href='<%=items_path%>'>Hot items »</a></p>
       </div>
     </div>
 <% else %>
