Fixed javascript issues. Able to destroy items now. Errors in rails server output gone. -CD

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
-  <%= javascript_include_tag 'rails' %>
-  <%= javascript_include_tag :defaults %>
+  <%#= javascript_include_tag 'rails' %>
+  <%#= javascript_include_tag :defaults %>
 
   <a class="brand" href="#">BestBay!</a>
   <ul class="nav">
