--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,7 +12,7 @@
     <th>Seller</th>
     <th></th>
     <th></th>
-    <!--<th></th>-->
+    <th></th>
   </tr>
 
 <% @items.each do |item| %>
@@ -28,8 +28,7 @@
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
 
-  <!-- <td><%#= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>      -->
-
+    <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
 
   </tr>
 <% end %>
