added items on homepage from db. added admin pages. changed item pages: LM

--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -2,7 +2,7 @@
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <%= stylesheet_link_tag 'blueprint/screen', :media=>"screen, projection" %>
-<%= stylesheet_link_tag 'blueprint/print',  :media=>"screen, projection"  %>
+<!--<%#= stylesheet_link_tag 'blueprint/print',  :media=>"screen, projection"  %>-->
 <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
 <%= stylesheet_link_tag 'custom', :media=>"screen, projection"  %>
 <%= stylesheet_link_tag 'bootstrap', :media=>"screen, projection"  %>
