--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <%#= javascript_include_tag 'rails' %>
   <%#= javascript_include_tag :defaults %>
 
-  <a class="brand" href="#">BestBay!</a>
+  <a class="brand" href="/">BestBay!</a>
   <ul class="nav">
     <li class="active"><%= link_to "Home", root_path %></li>
     <%= render 'devise/menu/registration_items' %>
