--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -291,9 +291,12 @@ a:hover {
     float: left;
 }
 
+
 .row {
     zoom: 1;
     margin-left: -20px;
+    width: 1100px;
+    height: 300px;
 }
 
 .row:before, .row:after {
@@ -305,12 +308,21 @@ a:hover {
 
 .row:after {
     clear: both;
+
 }
 
 [class*="span"] {
     display: inline;
     float: left;
     margin-left: 20px;
+}
+
+ .home-item-desc {
+   height: 300px;
+   text-align: justify;
+ }
+.home-item-desc .heading {
+    padding-bottom: 10px;
 }
 
 .span1 {
@@ -1501,6 +1513,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
     font-size: 20px;
     font-weight: 200;
     line-height: 1;
+    text-decoration: none;
 }
 
 .topbar p {
@@ -1990,13 +2003,19 @@ a.menu:after, .dropdown-toggle:after {
     color: #404040;
 }
 
+.offer-item {
+    float:right;
+}
 .hero-unit {
-    background-color: #f5f5f5;
-    margin-bottom: 30px;
-    padding: 60px;
+    /*background-color: #CAE1FF;*/
+    background-image: url('/images/fullbags.jpg');
+    margin-bottom: -13px;
+    margin-left: -71px;
+    padding : 95px 112px 230px 28px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
+    width: 920px;
 }
 
 .hero-unit h1 {
@@ -2105,8 +2124,8 @@ footer {
     display: inline-block;
     background-color: #e6e6e6;
     background-repeat: no-repeat;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));
-    background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+    /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));
+    background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);  */
     background-image: -moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);
     background-image: -ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
     background-image: -o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
@@ -2387,18 +2406,19 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 
 .well {
-    background-color: #f5f5f5;
+    background-color: #CAE1FF;
     margin-bottom: 20px;
     padding: 19px;
     min-height: 20px;
     border: 1px solid #eee;
     border: 1px solid rgba(0, 0, 0, 0.05);
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    width: 155px ;
 }
 
 .well blockquote {
