--- a/app/views/pages/adminHome.html.erb
+++ b/app/views/pages/adminHome.html.erb
@@ -4,7 +4,7 @@
         <h2>Hello admin!</h2>
         <p>Our site is rocking these days. We are getting good hits.</p><br><br>
         <p>Keep track of all the users and all the items</p>
-        <!--<a class="btn primary large" href='<%#=users_path%>'>Manage Users »</a>-->
+        <a class="btn primary large" href='<%=users_path%>'>Manage Users »</a>
         <a class="btn primary large" href='<%=items_path%>'>Manage Items »</a>
       </div>
     </div>
