--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :condition %><br />
-    <%= f.select :condition, [['New','new'] , ['Used', 'used']]%>
+    <%= f.select :condition, [['New','1'] , ['Used', '0']]%>
   </div>
 
   <div class="field">
