--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,7 +26,12 @@
     <td><%= item.title %></td>
     <td><%= link_to image_tag (item.photo.url(:small)), {:action => 'show', :controller => 'items'}  %></td>
     <td><%= item.description %></td>
-    <td><%= item.condition %></td>
+    <td><%if item.condition?%>
+            New
+        <%else%>
+            Used
+        <%end%>
+    </td>
     <td><%= item.starting_price %></td>
     <!--<td><%#= item.duration %></td>         -->
     <td><%= item.category_id %></td>
