chhanges to items form -cd/wk

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -34,6 +34,12 @@
     <%= f.label :starting_price %><br />
     <%= f.text_field :starting_price %>
   </div>
+
+    <!-- div class="field">
+    <%#= f.label "Main Category" %><br />
+    <%#= f.select :category_id, Category.where(:parentID => nil).collect {|category| [ category.name, category.id ]} %>
+  </div -->
+  
   <div class="field">
     <%= f.label "Subcategory" %><br />
     <%= f.select :category_id, Category.where("parentID NOT ?", nil).collect {|category| [ category.name, category.id ]} %>
