--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,22 +30,22 @@
       <h5>General Categories</h5>
       <ul>
         <li class="active"><%= link_to "All Items", items_path %></li>
-        <li><a href="#">Books</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">Movies</a></li>
+        <li class="active"><%= link_to "Books", items_path(:browse=>Category.find_by_name("Books").id) %></a></li>
+        <li class="active"><%= link_to "Music", items_path(:browse=>Category.find_by_name("Music").id) %></a></li>
+        <li class="active"><%= link_to "Movies", items_path(:browse=>Category.find_by_name("Movies").id) %></a></li>
       </ul>
       <h5>Electronics</h5>
       <ul>
-        <li><a href="#">Computer</a></li>
-        <li><a href="#">Mobile</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Cameras</a></li>
+        <li class="active"><%= link_to "Computer", items_path(:browse=>Category.find_by_name("Computer").id) %></a></li>
+        <li class="active"><%= link_to "Mobile", items_path(:browse=>Category.find_by_name("Mobile").id) %></a></li>
+        <li class="active"><%= link_to "Home", items_path(:browse=>Category.find_by_name("Home").id) %></a></li>
+        <li class="active"><%= link_to "Cameras", items_path(:browse=>Category.find_by_name("Cameras").id) %></a></li>
       </ul>
       <h5>Fashion</h5>
       <ul>
-        <li><a href="#">Men</a></li>
-        <li><a href="#">Women</a></li>
-        <li><a href="#">Kids</a></li>
+        <li class="active"><%= link_to "Men", items_path(:browse=>Category.find_by_name("Men").id) %></a></li>
+        <li class="active"><%= link_to "Women", items_path(:browse=>Category.find_by_name("Women").id) %></a></li>
+        <li class="active"><%= link_to "Kids", items_path(:browse=>Category.find_by_name("Kids").id) %></a></li>
       </ul>
     </div>
   </div>
