--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,9 +26,13 @@
       <%= f.text_field :last_name %></div>
 
     <div>
-      <label>Date of birth</label>
+     <label>Date of birth</label>
+     <br/>
+      <%= date_select :resource, :dob,:start_year => 1900, :end_year => 2011 %></div>
+
+    <div><%= f.label :phone %>
       <br/>
-      <%= f.text_field :dob %></div>
+      <%= f.text_field :phone %></div>
 
     <div><%= f.label :street %>
       <br/>
@@ -45,6 +49,10 @@
     <div><%= f.label :state %>
       <br/>
       <%= f.text_field :state %></div>
+
+    <div><%= f.label :country %>
+      <br/>
+      <%= f.text_field :country %></div>
 
     <div><%= f.submit "Update" %></div>
 <% end %>
