--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -34,8 +34,8 @@
     </td>
     <td><%= item.starting_price %></td>
     <!--<td><%#= item.duration %></td>         -->
-    <td><%= item.category_id %></td>
-    <td><%= item.seller_id %></td>
+    <td><%= Category.find(item.category_id).name %></td>
+    <td><%= User.find(item.seller_id).email %></td>
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
 
