--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,6 +6,15 @@
 <a class="btn primary large offer-item" href='/users/sign_in'>Login to offer your item »</a>
  <% end %>
 
+<%#= @values %>
+<!--
+<%# form_tag items_path, :method => 'get' do %>
+  <p>
+    <%#= text_field_tag :search, params[:search] %>
+    <%#= submit_tag "Search", :name => nil %>
+  </p>
+<%# end %>
+for the later usage (search fn)-->
 <table>
   <tr>
     <th>Title</th>
