--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,11 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
+    <div>
+     <label>Are you a seller?</label>
+     <br/>
+     <%= f.check_box :is_seller %></div>
+
     <div><%= f.label :email %>
       <br/>
       <%= f.email_field :email %></div>
