--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,14 @@
 <!--<h1>Listing items</h1>-->
 
-<% if user_signed_in? && current_user.is_seller? %>
-<a class="btn primary large offer-item" href='<%=new_item_path%>'>Offer your item for bidding »</a>
+<% if user_signed_in? %>
+ <%if current_user.is_seller? %>
+  <a class="btn primary large offer-item" href='<%=new_item_path%>'>Offer your item for bidding »</a>
+ <% else %>
+  <a class="btn primary large offer-item" href='/users/sign_out'>Register as a seller to offer your item »</a>
+        <!--ACTION ITEM: user should be redirected to seller register with is_seller already checked-in-->
+  <% end %>
 <% else %>
-<a class="btn primary large offer-item" href='/users/sign_in'>Register as a seller to offer your item »</a>
+    <a class="btn primary large offer-item" href='/users/sign_in'>Login to offer your item »</a>
  <% end %>
 
 <%#= @values %>
@@ -44,8 +49,8 @@ for the later usage (search fn)-->
     <td><%= item.starting_price %></td>
     <!--<td><%#= item.duration %></td>         -->
 
-    <td><%= Category.find(item.category_id).name %></td>
-    <td><%= User.find(item.seller_id).email %></td>
+    <td><%= item.category_id %></td>
+    <td><%= item.seller_id%></td>
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
 
