--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,17 +30,29 @@
   <b>Duration:</b>
   <%#= @item.duration %>
 </p> -->
-
+   <!--
 <p>
   <b>Category:</b>
-  <%= Category.find(@item.category_id).name %>
+  <%#= Category.find(@item.category_id).name %>
 </p>
 
 <p>
   <b>Seller:</b>
-  <%= User.find(@item.seller_id).email %>
+  <%#= User.find(@item.seller_id).email %>
 </p>
-
+      -->
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <%= link_to 'Back', items_path %>
+
+<%= form_for @item, :html => { :multipart => true } do |f| %>
+<div class="field">
+    <br />
+     <%= f.label "BidValue" %><br />
+    <%= f.text_field :bidvalue %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Place Bid"%>
+  </div>
+<% end %>
+<!--<a class="btn primary large offer-item" href='<%#= item_path %>'>Place Bid »</a>-->
