--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -49,8 +49,8 @@ for the later usage (search fn)-->
     <td><%= item.starting_price %></td>
     <!--<td><%#= item.duration %></td>         -->
 
-    <td><%= item.category_id %></td>
-    <td><%= item.seller_id%></td>
+    <td><%= Category.find(item.category_id).name %></td>
+    <td><%= User.find(item.seller_id).email %></td>
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
 
