--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <div class="sidebar">
     <div class="well">
       <h5>General Categories</h5>
-            <ul>
+       <ul>
         <li class="active"><%= link_to "All Items", items_path %></li>
         <li class="active"><%= link_to "Books", items_path(:browse=>Category.find_by_name("Books").id) %></li>
         <li class="active"><%= link_to "Music", items_path(:browse=>Category.find_by_name("Music").id) %></li>
@@ -36,7 +36,7 @@
       </ul>
       <h5>Electronics</h5>
       <ul>
-        <li class="active"><%= link_to "Computer", items_path(:browse=>Category.find_by_name("Computer").id) %></li>
+        <li class="active"><%= link_to "Computers", items_path(:browse=>Category.find_by_name("Computers").id) %></li>
         <li class="active"><%= link_to "Mobile", items_path(:browse=>Category.find_by_name("Mobile").id) %></li>
         <li class="active"><%= link_to "Home", items_path(:browse=>Category.find_by_name("Home").id) %></li>
         <li class="active"><%= link_to "Cameras", items_path(:browse=>Category.find_by_name("Cameras").id) %></li>
