--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -45,8 +45,10 @@
 
 <% if user_signed_in? %>
 <% if current_user.is_seller? %>
+<% if current_user.id == @item.seller_id%>
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <%= link_to 'Back', items_path %>
+<% end %>
 <% end %>
 <% end %>
 
