Added photos to home page. -CD

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,6 +26,12 @@
   <%= @item.starting_price %>
 </p>
 
+<p>
+  <b>Current price:</b>
+  <%= @item.bidvalue %>
+</p>
+
+
 <!-- <p>
   <b>Duration:</b>
   <%#= @item.duration %>
