Added Sidebar on custom pages AD LM

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="devise-layout" style="margin-left:40px">
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -61,3 +62,4 @@
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
+</div>
