--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="devise-layout" style="margin-left:40px">
 <h2>Edit User Registration <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}) do |f| %>
@@ -63,3 +64,4 @@
   .</p>
 
 <%= link_to "Back", :back %>
+</div>
