--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,13 +12,12 @@
 <% if user_signed_in? %>
 
   <div class="hero-unit1">
+     <h2>Welcome, <%= current_user.first_name%> !</h2>
    <% if current_user.is_seller? %>
-    <h2>Welcome, Seller!</h2>
-    <p>Browse Items, Offer Item and Earn money in minutes </p>
+    <p>Browse Items, Offer Item and mint money in minutes </p>
     <a class="btn primary large" href='<%=new_item_path%>'>Offer Your Item »</a>
     <a class="btn primary large" href='<%=items_path%>'>All Items »</a>
    <% else %>
-    <h2>Welcome, Buyer!</h2>
     <p>Shop, Bid and Celebrate!!</p>
     <a class="btn primary large" href='<%=items_path%>'>Hot Items »</a>
    <%end%>
