--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -33,12 +33,8 @@ for the later usage (search fn)-->
     <th></th>
     <% if user_signed_in? %>
         <%if current_user.is_seller? %>
-
-            <%#if current_user.id == @item_par_for_table.seller_id %>
                 <th></th>
                 <th></th>
-            <%# end %>
-
         <% end %>
     <%end%>
   </tr>
@@ -46,7 +42,7 @@ for the later usage (search fn)-->
 <% @items.each do |item| %>
   <tr>
     <td><%= item.title %></td>
-    <td><%= link_to image_tag (item.photo.url(:small)), {:action => 'show', :controller => 'items'}  %></td>
+    <td><%= link_to (image_tag (item.photo.url(:small)), :action => 'show', :controller => 'items'), item %></td>
     <td><%= item.description %></td>
     <td><%if item.condition?%>
             New
@@ -59,8 +55,9 @@ for the later usage (search fn)-->
 
     <td><%= Category.find(item.category_id).name %></td>
     <td><%= User.find(item.seller_id).email %></td>
-    <td><%= link_to 'Show', item %></td>
+
     <% if user_signed_in? %>
+        <td><%= link_to 'Show & Start Bid', item %></td>
         <!-- WJ need admin role -->
         <%if current_user.is_seller? %>
             <%if current_user== User.find(item.seller_id) %>
@@ -68,9 +65,12 @@ for the later usage (search fn)-->
                 <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
             <% end%>
         <% end %>
+    <%else%>
+    <td><%= link_to 'Show', item %></td>
     <% end %>
   </tr>
 <% end %>
 </table>
 
-<br />
+
+
