--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -56,18 +56,21 @@
 <%= link_to 'Back', items_path %>
 
 
+<% if user_signed_in? %>
+    <% if current_user.is_seller? %>
 
-<%= form_for @item, :html => { :multipart => true } do |f| %>
-<div class="field">
-    <br />
-     <%= f.label "BidValue" %><br />
-    <%= f.text_field :bidvalue %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Place Bid"%>
-  </div>
+    <%else%>
+        <%= form_for @item, :html => { :multipart => true } do |f| %>
+        <div class="field">
+            <br />
+             <%= f.label "BidValue" %><br />
+            <%= f.text_field :bidvalue %>
+          </div>
+          <div class="actions">
+            <%= f.submit "Place Bid"%>
+          </div>
+        <% end %>
+    <% end %>
 <% end %>
-
-
 
 <!--<a class="btn primary large offer-item" href='<%#= item_path %>'>Place Bid »</a>-->
