--- a/app/views/pages/categories.html.erb
+++ b/app/views/pages/categories.html.erb
@@ -7,7 +7,7 @@
       </ul>
       <h5>Electronics</h5>
       <ul>
-        <li class="active"><%= link_to "Computer", items_path(:browse=>Category.find_by_name("Computer").id) %></li>
+        <li class="active"><%= link_to "Computers", items_path(:browse=>Category.find_by_name("Computers").id) %></li>
         <li class="active"><%= link_to "Mobile", items_path(:browse=>Category.find_by_name("Mobile").id) %></li>
         <li class="active"><%= link_to "Home", items_path(:browse=>Category.find_by_name("Home").id) %></li>
         <li class="active"><%= link_to "Cameras", items_path(:browse=>Category.find_by_name("Cameras").id) %></li>
