--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,3 +1,5 @@
+<!-- form to display the item fields while oferring an item for auction -->
+
 <%= form_for @item, :html => { :multipart => true } do |f| %>
   <% if @item.errors.any? %>
     <div id="error_explanation">
