--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -51,9 +51,13 @@
       <br/>
       <%= f.text_field :state %></div>
 
+
     <div><%= f.label :country %>
       <br/>
       <%= f.text_field :country %></div>
+
+
+      <%#= f.country_select :country, [], {:selected => "United States"} %>
 
     <div><%= f.submit "Update" %></div>
 <% end %>
