--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,22 +1,24 @@
 <!--<h1>Listing items</h1>-->
 
+<!-- This page display all the items present in the system -->
+
 <% if user_signed_in? %>
- <%if current_user.is_seller? %>
-  <a class="btn primary large offer-item" href='<%=new_item_path%>'>Offer your item for bidding »</a>
- <% else %>
-  <a class="btn primary large offer-item" href='/users/sign_out'>Register as a seller to offer your item »</a>
+    <% if current_user.is_seller? %>
+        <a class="btn primary large offer-item" href='<%= new_item_path %>'>Offer your item for bidding »</a>
+    <% else %>
+        <a class="btn primary large offer-item" href='/users/sign_out'>Register as a seller to offer your item »</a>
         <!--ACTION ITEM: user should be redirected to seller register with is_seller already checked-in-->
-  <% end %>
+    <% end %>
 <% else %>
     <a class="btn primary large offer-item" href='/users/sign_in'>Login to offer your item »</a>
- <% end %>
+<% end %>
 
 <%#= @values %>
 <!--
 <%# form_tag items_path, :method => 'get' do %>
   <p>
     <%#= text_field_tag :search, params[:search] %>
-    <%#= submit_tag "Search", :name => nil %>
+<%#= submit_tag "Search", :name => nil %>
   </p>
 <%# end %>
 for the later usage (search fn)-->
@@ -32,42 +34,43 @@ for the later usage (search fn)-->
     <th>Seller</th>
     <th></th>
     <% if user_signed_in? %>
-        <%if current_user.is_seller? %>
-                <th></th>
-                <th></th>
+        <% if current_user.is_seller? %>
+            <th></th>
+            <th></th>
         <% end %>
-    <%end%>
+    <% end %>
   </tr>
 
-<% @items.each do |item| %>
-  <tr>
-    <td><%= item.title %></td>
-    <td><%= link_to (image_tag (item.photo.url(:small)), :action => 'show', :controller => 'items'), item %></td>
-    <td><%= item.description %></td>
-    <td><%if item.condition?%>
-            New
-        <%else%>
-            Used
-        <%end%>
-    </td>
-    <td><%= item.starting_price %></td>
-    <!--<td><%#= item.duration %></td>         -->
+  <% @items.each do |item| %>
+      <tr>
+        <td><%= item.title %></td>
+        <td><%= link_to (image_tag (item.photo.url(:small)), :action => 'show', :controller => 'items'), item %></td>
+        <td><%= item.description %></td>
+        <td>
+          <% if item.condition? %>
+              New
+          <% else %>
+              Used
+          <% end %>
+        </td>
+        <td><%= item.starting_price %></td>
+        <!--<td><%#= item.duration %></td>         -->
 
-    <td><%= Category.find(item.category_id).name %></td>
-    <td><%= User.find(item.seller_id).email %></td>
+        <td><%= Category.find(item.category_id).name %></td>
+        <td><%= User.find(item.seller_id).email %></td>
 
 
         <td><%= link_to 'Show', item %></td>
         <!-- WJ need admin role -->
-        <%if user_signed_in? && current_user.is_seller? %>
-            <%if current_user== User.find(item.seller_id) %>
+        <% if user_signed_in? && current_user.is_seller? %>
+            <% if current_user== User.find(item.seller_id) %>
                 <td><%= link_to 'Edit', edit_item_path(item) %></td>
                 <td><%= link_to 'Delete', item, :confirm => 'Are you sure?', :method => :delete %></td>
-            <% end%>
+            <% end %>
         <% end %>
 
-  </tr>
-<% end %>
+      </tr>
+  <% end %>
 </table>
 
 
