--- a/app/views/pages/categories.html.erb
+++ b/app/views/pages/categories.html.erb
@@ -1,3 +1,5 @@
+<!-- The list of categories in the list. Presented inside the sidebar  on home/index/item pages -->
+
       <h5>General Categories</h5>
        <ul>
         <li class="active"><%= link_to "All Items", items_path %></li>
