--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,26 @@
-
 <!--  <%# form_tag items_path, :method => 'get' do %>
           <p>
             <%#= text_field_tag :search, params[:search] %>
-            <%#= submit_tag "Search", :name => nil %>
+<%#= submit_tag "Search", :name => nil %>
           </p>
 
           <#% end %>
     for the later iteration (search fn)-->
 
+<!-- This page is the home page of the site. It displays some of the items present in the system and categories-->
 
 <% if user_signed_in? %>
 
-  <div class="hero-unit1">
-     <h2>Welcome, <%= current_user.first_name%> !</h2>
-   <% if current_user.is_seller? %>
-    <p>Browse Items, Offer Item and mint money in minutes </p>
-    <a class="btn primary large" href='<%=new_item_path%>'>Offer Your Item »</a>
-    <a class="btn primary large" href='<%=items_path%>'>All Items »</a>
-   <% else %>
-    <p>Shop, Bid and Celebrate!!</p>
-    <a class="btn primary large" href='<%=items_path%>'>Hot Items »</a>
-   <%end%>
+    <div class="hero-unit1">
+      <h2>Welcome, <%= current_user.first_name %> !</h2>
+      <% if current_user.is_seller? %>
+          <p>Browse Items, Offer Item and mint money in minutes </p>
+          <a class="btn primary large" href='<%= new_item_path %>'>Offer Your Item »</a>
+          <a class="btn primary large" href='<%= items_path %>'>All Items »</a>
+      <% else %>
+          <p>Shop, Bid and Celebrate!!</p>
+          <a class="btn primary large" href='<%= items_path %>'>Hot Items »</a>
+      <% end %>
     </div>
 <% else %>
     <div class="container">
@@ -30,19 +30,19 @@
     </div>
 <% end %>
 
-<!-- Example row of columns -->
-  <hr>
+<!-- row of items -->
+<hr>
 <div class="row">
- <% @items.each_with_index do |item,i| %>
+  <% @items.each_with_index do |item, i| %>
 
-   <div class="home-item-desc span6">
-    <h2 class ="heading"><%= item.title %></h2>
+      <div class="home-item-desc span6">
+        <h2 class="heading"><%= item.title %></h2>
 
-    <%= image_tag item.photo.url(:small)  %>
+        <%= image_tag item.photo.url(:small) %>
 
-    <p><%= item.description %></p>
-    <%= link_to 'View Details', item ,:class=> 'btn' %>
-   </div>
- <% end %>
+        <p><%= item.description %></p>
+        <%= link_to 'View Details', item, :class=> 'btn' %>
+      </div>
+  <% end %>
 </div>
 <hr>
