fixed bug on item bidding page -WJ/CD

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<!--<h1>Listing items</h1>-->
+
 
 <% if user_signed_in? %>
  <%if current_user.is_seller? %>
@@ -11,15 +11,16 @@
     <a class="btn primary large offer-item" href='/users/sign_in'>Login to offer your item »</a>
  <% end %>
 
+<!-- for debugging purpose WJ-->
 <%#= @values %>
-<!--
-<%# form_tag items_path, :method => 'get' do %>
+
+<% form_tag items_path, :method => 'get' do %>
   <p>
-    <%#= text_field_tag :search, params[:search] %>
-    <%#= submit_tag "Search", :name => nil %>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
   </p>
-<%# end %>
-for the later usage (search fn)-->
+<% end %>
+
 <table>
   <tr>
     <th>Title</th>
