--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
 
-<!--  <%# form_tag items_path, :method => 'get' do %>
+<% form_tag items_path, :method => 'get' do %>
           <p>
-            <%#= text_field_tag :search, params[:search] %>
-            <%#= submit_tag "Search", :name => nil %>
+            <%= text_field_tag :search, params[:search] %>
+            <%= submit_tag "Search", :name => nil %>
           </p>
 
-          <#% end %>
-    for the later iteration (search fn)-->
+<% end %>
+
 
 
 <% if user_signed_in? %>
